<resources>
    <!-- Activity Main-->
    <string name="Button_Play">Iniciar</string>
    <string name="Vista1">!</string>
    <string name="Vista2">!</string>
    <string name="Vista3">!</string>
    <string name="text_Credito">Credito</string>
    <string name="text_Credit">1000</string>
    <string name="Traga_Monedas">Traga-Monedas</string>
    <string name="text_Apuesta">10</string>
    <string name="text_Apuestatitulo">Apuesta</string>
    <string name="Button_Bonus">Bonus</string>
    <string name="text_Instrucciones">BONUS->Para Ganar en el bonus debes escribir un numero en el rango de 1-9, si adivinas el digito ganas el bonus, Suerte!; Si el juego llega a Credito=0 Se Reinicia Y Comienza De Nuevo</string>
    <string name="text_vistaNumeroOculto">X</string>
    <string name="text_Titulo">Bienvenido Al Bonus</string>
    <string name="text_pedrNumero">Ing. Numero</string>
</resources>
