<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Traga_Monedas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="false"
    android:animateLayoutChanges="false"
    android:animationCache="false"
    android:background="#9575CD"
    android:backgroundTintMode="screen"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text_Credito"
        android:layout_width="79dp"
        android:layout_height="33sp"
        android:breakStrategy="high_quality"
        android:fontFamily="Roboto"
        android:text="@string/text_Credito"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_Play"
        app:layout_constraintEnd_toStartOf="@+id/text_Credit"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        tools:text="@string/text_Credito" />

    <TextView
        android:id="@+id/text_Credit"
        android:layout_width="79sp"
        android:layout_height="33sp"
        android:fontFamily=""
        android:text="@string/text_Credit"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/Vista1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29"
        tools:text="@string/text_Credit" />

    <View
        android:id="@+id/sloter"
        android:layout_width="413dp"
        android:layout_height="148dp"
        android:background="@drawable/slots"
        app:layout_constraintBottom_toTopOf="@+id/Button_Play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Credito" />

    <ImageView
        android:id="@+id/Vista1"
        android:layout_width="128sp"
        android:layout_height="135sp"
        android:layout_marginStart="4sp"
        android:contentDescription="@string/Vista1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/Button_Play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Credito"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/Vista2"
        android:layout_width="128sp"
        android:layout_height="135sp"
        android:contentDescription="@string/Vista2"
        android:fontFamily="Roboto"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/Button_Play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Credito"
        app:layout_constraintVertical_bias="0.488"
        app:srcCompat="@android:drawable/presence_online"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/Vista3"
        android:layout_width="123sp"
        android:layout_height="132sp"
        android:contentDescription="@string/Vista3"
        android:fontFamily="Roboto"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/Button_Play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.990"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Credito"
        app:srcCompat="@android:drawable/ic_lock_lock"
        tools:visibility="visible" />

    <Button
        android:id="@+id/Button_Play"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_marginBottom="284dp"
        android:fontFamily="Roboto"
        android:text="@string/Button_Play"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_apuesta"
        android:layout_width="79sp"
        android:layout_height="33sp"
        android:textSize="20sp"
        android:fontFamily="Roboto"
        android:text="@string/text_Apuestatitulo"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_Play"
        app:layout_constraintVertical_bias="0.063"
        tools:text="@string/text_Apuestatitulo" />

    <TextView
        android:id="@+id/text_apues"
        android:layout_width="71sp"
        android:fontFamily="Roboto"
        android:layout_height="33sp"
        android:textSize="20sp"
        android:text="@string/text_Apuesta"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/text_apuesta"
        app:layout_constraintTop_toBottomOf="@+id/Button_Play"
        app:layout_constraintVertical_bias="0.063"
        tools:text="@string/text_Apuesta" />

    <View
        android:id="@+id/VistaBonus"
        android:layout_width="440dp"
        android:layout_height="263dp"
        android:background="#EDE7F6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Text_Titulo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_Bonus"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="138sp"
        android:fontFamily="Roboto"
        android:layout_height="68sp"
        android:text="@string/Button_Bonus"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/Button_Bonus" />

    <TextView
        android:id="@+id/Text_Titulo"
        android:layout_width="199sp"
        android:layout_height="32sp"
        android:layout_marginTop="12sp"
        android:textColor="#000000"
        android:fontFamily="Roboto"
        android:text="@string/text_Titulo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_apuesta" />

    <EditText
        android:id="@+id/text_pedir"
        android:autofillHints="Numero"
        android:layout_width="137sp"
        android:layout_height="53sp"
        android:ems="10"
        android:fontFamily="Roboto"
        android:hint="@string/text_pedrNumero"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_Bonus"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_NumOculto"
        android:layout_width="171sp"
        android:layout_height="109sp"
        android:textSize="99sp"
        android:fontFamily="Roboto"
        android:text="@string/text_vistaNumeroOculto"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_pedir"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text_Titulo"
        app:layout_constraintVertical_bias="0.769" />

</androidx.constraintlayout.widget.ConstraintLayout>